# interface-kinova-haptic-control

./: MData.txt  PoseMsg.m  README.md  interface.mlapp  interfaz2.mlapp  moveTo.m  readSpeed.m  read_pose.m  startRos.m  timerCallback.m
chai_codes/: feedback.cpp  no_feedback.cpp
matMsgs/kinova_msgs/action/: ArmPose.action
matMsgs/matlab_msg_gen_ros1/win64/devel/: .catkin  _setup_util.py  env.bat  setup.bat
matMsgs/matlab_msg_gen_ros1/win64/devel/include/kinova_msgs/: ArmPoseActionFeedback.h  ArmPoseGoal.h  ArmPoseResult.h  KinovaPose.h
matMsgs/matlab_msg_gen_ros1/win64/devel/lib/: kinova_msgs_matlab.exp
matMsgs/matlab_msg_gen_ros1/win64/devel/lib/pkgconfig/: kinova_msgs.pc
matMsgs/matlab_msg_gen_ros1/win64/devel/share/kinova_msgs/cmake/: kinova_msgs-msg-paths.cmake  kinova_msgsConfig.cmake
matMsgs/matlab_msg_gen_ros1/win64/install/: .rosinstall
matMsgs/matlab_msg_gen_ros1/win64/install/include/kinova_msgs/: ArmPoseAction.h  ArmPoseActionGoal.h  ArmPoseActionResult.h  ArmPoseFeedback.h
matMsgs/matlab_msg_gen_ros1/win64/install/lib/pkgconfig/: kinova_msgs.pc
matMsgs/matlab_msg_gen_ros1/win64/install/m/+ros/+internal/+ros/+custommessages/+kinova_msgs/: armPoseAction.m  armPoseActionFeedback.m  armPoseFeedback.m  kinovaPose.m
matMsgs/matlab_msg_gen_ros1/win64/install/m/+ros/+msggen/+kinova_msgs/: ArmPoseAction.m  ArmPoseActionGoal.m  ArmPoseActionResult.m  PoseVelocity.m
matMsgs/matlab_msg_gen_ros1/win64/install/share/kinova_msgs/cmake/: kinova_msgsConfig.cmake
matMsgs/matlab_msg_gen_ros1/win64/install/share/kinova_msgs/msg/: ArmPoseResult.msg  KinovaPose.msg
matMsgs/matlab_msg_gen_ros1/win64/src/: VersionInfo.mat
matMsgs/matlab_msg_gen_ros1/win64/src/kinova_msgs/: CMakeLists.txt  Md5checksum.mat  package.xml  packageInfo.mat
matMsgs/matlab_msg_gen_ros1/win64/src/kinova_msgs/include/kinova_msgs/: visibility_control.h
matMsgs/matlab_msg_gen_ros1/win64/src/kinova_msgs/m/+ros/+internal/+ros/+custommessages/+kinova_msgs/: armPoseActionGoal.m  armPoseActionResult.m  armPoseGoal.m  armPoseResult.m  poseVelocity.m
matMsgs/matlab_msg_gen_ros1/win64/src/kinova_msgs/m/+ros/+msggen/+kinova_msgs/: ArmPoseActionFeedback.m  ArmPoseFeedback.m  ArmPoseGoal.m  ArmPoseResult.m  KinovaPose.m
matMsgs/matlab_msg_gen_ros1/win64/src/kinova_msgs/src/: kinova_msgs_ArmPoseActionFeedback_message.cpp  kinova_msgs_ArmPoseActionGoal_message.cpp  kinova_msgs_ArmPoseActionResult_message.cpp  kinova_msgs_ArmPoseAction_message.cpp  kinova_msgs_ArmPose_action.cpp  kinova_msgs_KinovaPose_message.cpp  kinova_msgs_PoseVelocity_message.cpp
